@@ -1,11 +1,0 @@
-[Unit]
-Description=Periodically drop caches to save memory under WSL.
-Documentation=https://github.com/arkane-systems/genie
-ConditionVirtualization=microsoft
-
-[Timer]
-OnBootSec=3min
-OnUnitActiveSec=3min
-
-[Install]
-WantedBy=timers.target
