@@ -32,7 +32,6 @@ package-inner:
 	mkdir -p "$(BINDIR)"
 	install -Dm 4755 -o root "binsrc/genie/bin/Release/net5.0/linux-x64/publish/genie" -t "$(INSTALLDIR)"
 	install -Dm 0755 -o root "binsrc/runinwsl/bin/Release/net5.0/linux-x64/publish/runinwsl" -t "$(INSTALLDIR)"
-	install -Dm 0755 -o root "othersrc/scripts/drop_cache_if_idle" -t "$(INSTALLDIR)"
 
 	# Environment generator.
 	install -Dm 0755 -o root "othersrc/scripts/10-genie-envar.sh" -t "$(INSTALLDIR)"
@@ -41,13 +40,10 @@ package-inner:
 	install -Dm 0644 -o root "othersrc/etc/genie.ini" -t "$(ETCDIR)"
 
 	# Unit files.
-    install -Dm 0644 -o root "othersrc/lib-systemd-system/wsl-drop-caches.service" -t "$(SVCDIR)"
-    install -Dm 0644 -o root "othersrc/lib-systemd-system/wsl-drop-caches.timer" -t "$(SVCDIR)"
-
 	install -Dm 0644 -o root "othersrc/lib-systemd-system/wslg-xwayland.service" -t "$(SVCDIR)"
-    install -Dm 0644 -o root "othersrc/lib-systemd-system/wslg-xwayland.socket" -t "$(SVCDIR)"
+	install -Dm 0644 -o root "othersrc/lib-systemd-system/wslg-xwayland.socket" -t "$(SVCDIR)"
 
-    install -Dm 0644 -o root "othersrc/lib-systemd-system/user-runtime-dir@.service.d/override.conf" -t "$(SVCDIR)/user-runtime-dir@.service.d/override.conf"
+	install -Dm 0644 -o root "othersrc/lib-systemd-system/user-runtime-dir@.service.d/override.conf" -t "$(SVCDIR)/user-runtime-dir@.service.d"
 
 clean:
 	debuild -- clean
