@@ -4,6 +4,3 @@ setuid-binary usr/libexec/genie/genie 4755 root/root
 # Systemd requires that this be here.
 breakout-link usr/lib/systemd/system-environment-generators/10-genie-envar.sh -> usr/libexec/genie/10-genie-envar.sh
 breakout-link usr/lib/systemd/user-environment-generators/10-genie-envar.sh -> usr/libexec/genie/10-genie-envar.sh
-
-# No manual page for this executable
-no-manual-page usr/sbin/drop_cache_if_idle
