@@ -1,3 +1,9 @@
+systemd-genie (1.39) buster bullseye bookworm sid focal bionic; urgency=medium
+
+        * Better WSLg support, courtesy of @diddledan.
+
+ -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 16:00:00 -0500
+
 systemd-genie (1.38) buster bullseye bookworm sid focal bionic; urgency=medium
 
         * Restored original default systemd startup timeout.
